# burn_sample

./: Cargo.toml
.container/: Dockerfile  docker-compose.yaml
src/: backend.rs  inference.rs  main.rs  model.rs  training.rs
